# inputkit

./: README.md  __init__.py  _unix.py  _win.py  main.py  push.sh  pyproject.toml
src/inputkit/: __init__.py  _unix.py  _win.py
